# broker-ops-exception-report-generator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: sample_market_events.csv  sample_order_events.csv
docs/: BROKER_OPS_PROJECT_PLAN.md  DATA_SCHEMA.md
docs/gbc/: AUDIT_LEDGER.md  CHECKUP_MATRIX.md  GBC_WORKING_SYSTEM.md
docs/gbc/records/phase1_project_scaffold/: APPROVED_PLAN.md  CHECKPOINT_NOTE.md  IMPLEMENTATION_REPORT.md  TASK_BRIEF.md  TEST_REPORT.md
docs/gbc/records/phase2_static_demo_data/: APPROVED_PLAN.md  CHECKPOINT_NOTE.md  IMPLEMENTATION_REPORT.md  TASK_BRIEF.md  TEST_REPORT.md
docs/gbc/records/phase3a_schema_validation/: APPROVED_PLAN.md  CHECKPOINT_NOTE.md  IMPLEMENTATION_REPORT.md  TASK_BRIEF.md  TEST_REPORT.md
docs/gbc/records/phase3b_lifecycle_duplicate_validation/: APPROVED_PLAN.md  CHECKPOINT_NOTE.md  IMPLEMENTATION_REPORT.md  TASK_BRIEF.md  TEST_REPORT.md
docs/gbc/templates/: APPROVED_PLAN.md  CHECKPOINT_NOTE.md  IMPLEMENTATION_REPORT.md  TASK_BRIEF.md  TEST_REPORT.md
outputs/: broker_ops_shift_report.md  broker_ops_shift_summary.json  by_symbol_trading_stats.csv  order_exception_log.csv
portfolio_evidence/: audit_summary.txt  final_integration_audit.txt  outputs_manifest.txt  shift_report_excerpt.txt
scripts/: build_project_plan_pdf.py
src/broker_ops_report/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  reporting.py  schema.py  validation.py
tests/: test_cli.py  test_exceptions.py  test_high_volume_audit.py  test_reporting.py  test_static_data.py  test_validation.py
(+50 files in other folders)
